# django-template-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/config/: settings.py
{{cookiecutter.project_slug}}/nginx/: default.conf
